feat: logout feature
